tests/negative/gold/typed-assign-local-test.gold
tests/negative/typed-assign-local-test.toit:8:9: error: Type mismatch. Expected 'int'. Got 'string'
  local = "str"
        ^
As check failed: a string ("str") is not a int.
  0: main                      tests/negative/typed-assign-local-test.toit:8:9
